# academic-notion

./: .gitignore  README.md  models.yaml
backend/: main.py  pyproject.toml  requirements.txt  vercel.json
backend/src/: config.py  main.py  models.py  models_auto.py
backend/src/database/: alembic.ini  db_client.py  db_models.py
backend/src/database/alembic/: env.py
backend/src/models/: __init__.py  api_models.py  models_auto.py
backend/src/notion_api/: api.py  models.py
frontend/: .eslintrc.cjs  README.md  package-lock.json  package.json  quasar.config.js
frontend/src/: models.ts  utils.ts
frontend/src-bex/: background.ts  manifest.json  my-content-script.ts
frontend/src/components/: NotionAuth.vue  SearchPageDatabase.vue  UploadWorkResult.vue  WorkTable.vue
frontend/src/models/: models.ts  models_auto.ts
frontend/src/pages/: PopupPage.vue
frontend/src/router/: routes.ts
frontend/src/services/: api.ts  database-work-mapping.ts  scrapers.ts  user-data-manager.ts  utils.ts
frontend/tests/: utils.test.ts
