[tool.poetry]
name = "academic-notion-backend"
version = "0.1.0"
description = ""
authors = ["Shawn <vuyuxl199199@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notion-client = "^2.2.1"
flask = "^3.0.3"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
