[tool.poetry]
name = "academic-notion-backend"
version = "0.1.0"
description = ""
authors = ["Shawn <vuyuxl199199@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notion-client = "^2.2.1"
python-dotenv = "^1.0.1"
typing-extensions = "^4.11.0"
fastapi = "^0.110.2"
pydantic = "^2.7.1"
httpx = "^0.27.0"
alembic = "^1.13.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
datamodel-code-generator = "^0.25.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
